# lab-work

./: .gitignore  README.md  data.txt  pyproject.toml  requirements.txt
algos/: eigenvalues.py  linear_regression.py  mat_mul.py  transpose.py
algos/deep-ml/: mat_mul.py  mean.py  transform_basis_change.py
algos/leetcode/: balancedpermutation.py  best_time_stock.py  bomb_enemy.py  btree_to_ll.py  cheapestflightinkstops.py  coin_change.py  combination.py  combination_sumII.py  course_scheduleII.py  distinct_subsequences.py  far_from_land.py  file_store.py  frog_jump.py  incr_subsequence.py  inmem.py  inmem2.py  inmem_test.py  longest_valid_parentheses.py  lru.py  lru2.py  max_rectangle.py  max_rotate_func.py  merge_intervals.py  min_job_difficulty.py  min_path_sum.py  networkdelay.py  paint_fences.py  paint_nx3.py  perfect_squares.py  prod_array.py  remove_boxes.py  storage.py  storage_test.py  stringcompressionII.py  student_attendance_II.py  task_schedulerII.py  triangle_min_sum_path.py  uber.py  unique_paths.py
comparison_logs/: multi_lstm_ensemble_20251205_180357.csv  simple_lstm_20251205_180626.csv
experiments/001_small_local_train/: main.py
experiments/002_colab_train/: Gemma3_4B_unsloth.ipynb
experiments/003_verl_gsm8k_ppo/: notes.txt  setup.sh
experiments/004_rl_cart_pole/: helloworld.py  policy_grad.py  qlearn.py  qlearn_demo.py  ray_ppo.py  results.md
experiments/005_flappy_bird/: main.py  play.py
experiments/006_chatty_bot/: AGENT.md  config.py  conversation_monitor.py  main.py  requirements.txt
experiments/007_nanochat/: mlp.py  nano.py  nano_train.py  pytorch_tut.py
experiments/011_free_will/: main.py  (+3 more)
interp-circuits/: notes.txt
training_exp/: __init__.py  gcp_launch.py  load_data.py  script.py  sft_llama.py
transformer/: main.py
(+77 files in other folders)
