[project]
name = "lab-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "gymnasium[classic-control]==1.1.1",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "ray[rllib]>=2.49.2",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]
