[project]
name = "lab-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.0.0",
    "flappy-bird-gymnasium>=0.4.0",
    "gymnasium[classic-control]==1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "ray[rllib]>=2.49.2",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "transformers>=4.56.0",
    "trl>=0.22.2",
    "unsloth>=2025.11.4",
    "vllm==0.11.2",
    "wandb>=0.23.0",
]
